--- a/CompeteMis/CompeteMis.csproj
+++ b/CompeteMis/CompeteMis.csproj
@@ -8,7 +8,16 @@
     <RootNamespace>Compete</RootNamespace>
     <ApplicationIcon>Compete.ico</ApplicationIcon>
 	<TieredPGO>true</TieredPGO>
+	<Configurations>Debug;Release;Debug-Java;Release-Java</Configurations>
 	<!--<PublishAot>true</PublishAot>-->
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug-Java|AnyCPU'">
+    <DefineConstants>$(DefineConstants);JAVA_LANGUAGE</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-Java|AnyCPU'">
+    <DefineConstants>$(DefineConstants);JAVA_LANGUAGE</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
