--- a/CompeteMis/App.config
+++ b/CompeteMis/App.config
@@ -3,5 +3,6 @@
 	<appSettings>
 		<add key="PluginPath" value="D:/Projects/CompeteMIS/src/GitHub/config/client/plugins"/>
 		<add key="SettingsPath" value="D:/Projects/CompeteMIS/src/GitHub/config/client/settings"/>
+		<add key="WebApiBaseAddress" value="http://192.168.172.1:8080/api/"/>
 	</appSettings>
 </configuration>
