--- a/Developer/Developer.csproj
+++ b/Developer/Developer.csproj
@@ -2,11 +2,12 @@
 
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
-		<TargetFramework>net8.0-windows7.0</TargetFramework>
+		<TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<UseWPF>true</UseWPF>
 		<RootNamespace>Compete.Mis.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
 		<TieredPGO>true</TieredPGO>
+		<SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
 		<!--<PublishAot>true</PublishAot>-->
 	</PropertyGroup>
 
@@ -88,6 +89,7 @@
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 		<PackageReference Include="Extended.Wpf.Toolkit" Version="4.6.0" />
 		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.77" />
+		<PackageReference Include="Npgsql" Version="8.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
