增加单据查询； 修正Bug。

--- a/CompeteMis/App.config
+++ b/CompeteMis/App.config
@@ -4,5 +4,6 @@
 		<add key="PluginPath" value="D:/Projects/CompeteMIS/src/GitHub/config/client/plugins"/>
 		<add key="SettingsPath" value="D:/Projects/CompeteMIS/src/GitHub/config/client/settings"/>
 		<add key="WebApiBaseAddress" value="http://localhost:8080/api/"/>
+		<add key="FileBaseAddress" value="http://localhost:8080/public/"/>
 	</appSettings>
 </configuration>
