--- a/CompeteMis/App.config
+++ b/CompeteMis/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="PluginPath" value="D:/Projects/CompeteMIS/src/GitHub/config/client/plugins"/>
+		<add key="PluginsPath" value="D:/Projects/CompeteMIS/src/GitHub/config/client/plugins"/>
 		<add key="SettingsPath" value="D:/Projects/CompeteMIS/src/GitHub/config/client/settings"/>
 		<add key="WebApiBaseAddress" value="http://localhost:8080/api/"/>
-		<add key="FileBaseAddress" value="http://localhost:8080/public/"/>
+		<add key="UseDataSignature" value="True"/>
 	</appSettings>
 </configuration>
