--- a/Developer/Developer.csproj
+++ b/Developer/Developer.csproj
@@ -8,6 +8,7 @@
 		<RootNamespace>Compete.Mis.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
 		<TieredPGO>true</TieredPGO>
 		<SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
+		<Platforms>AnyCPU;x64;x86;ARM32;ARM64</Platforms>
 		<!--<PublishAot>true</PublishAot>-->
 	</PropertyGroup>
 
@@ -87,7 +88,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-		<PackageReference Include="Extended.Wpf.Toolkit" Version="4.7.25104.5739" />
+		<PackageReference Include="Extended.Wpf.Toolkit" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
 		<PackageReference Include="Npgsql" Version="9.0.3" />
 	</ItemGroup>
@@ -102,6 +103,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\CompeteBase\CompeteBase.csproj" />
+	  <ProjectReference Include="..\CompeteMis\CompeteMis.csproj" />
 	</ItemGroup>
 
 </Project>
