--- a/UITemplate/UITemplate.csproj
+++ b/UITemplate/UITemplate.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
+    <Platforms>AnyCPU;ARM32;ARM64;x86;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
